# DeNA2024Hackason

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: admin.py  models.py  serializers.py  urls.py  views.py
backend/app/migrations/: 0001_initial.py  0002_user.py  0003_capsule_timeline_delete_product.py  0004_alter_timeline_noticed_at.py  0005_alter_capsule_open_at_and_more.py  0006_alter_capsule_open_requested_at.py
backend/backend/: settings.py  urls.py
backend/templates/: swagger-ui.html
frontend/: Dockerfile
frontend/frontend-app/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/frontend-app/app/: globals.css  page.tsx
frontend/frontend-app/app/bury/: page.tsx
frontend/frontend-app/app/bury/_components/: auto-photo.tsx  bury_animation.tsx  dialog.tsx  index.tsx  location.tsx  members.tsx  move.tsx  name.tsx  photo.tsx  progress.tsx
frontend/frontend-app/app/bury/_types/: reducer.tsx
frontend/frontend-app/app/debug/: page.tsx
frontend/frontend-app/app/login/: page.tsx
frontend/frontend-app/app/time-capsules/[id]/: page.tsx
frontend/frontend-app/app/time-capsules/[id]/_components/: digging.tsx  iconwindows.tsx  index.tsx  opened.tsx  stateIcon.tsx  waiting.tsx
frontend/frontend-app/app/types/: time-cupsule.tsx
frontend/frontend-app/app/utils/: fetch-capsules.ts
frontend/frontend-app/public/animation/: OpenChestAnimation.tsx  open-chest.tsx  treasure.tsx
